--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer class="footer bg-dark py-3 mt-auto">
   <div class="container">
-    <span class="text-light"> &#169; YelpCamp 2023</span>
+    <span class="text-light"> &#169; MYcamps 2023</span>
   </div>
 </footer>
