--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,7 +16,7 @@
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
       <header class="mb-auto">
         <div>
-          <h3 class="float-md-left mb-0">YelpCamp</h3>
+          <h3 class="float-md-left mb-0">MYcamps</h3>
           <nav class="nav nav-masthead justify-content-center float-md-right">
             <a class="nav-link active" aria-current="page" href="#">Home</a>
             <a class="nav-link" href="/campgrounds">Campgrounds</a>
@@ -30,9 +30,9 @@
         </div>
       </header>
       <main class="px-3 mb-auto">
-        <h1>YelpCamp</h1>
+        <h1>MYcamps</h1>
         <p class="lead">
-          Welcome to YelpCamp! <br />
+          Welcome to MYcamps! <br />
           Jump right in and explore our many campgrounds. <br />
           Feel free to share some of your own and comment on others!
         </p>
